# UUV-formation-navigation

./: .~lock.相对定位导航方案分析需求20250915.docx#  EARTH_CORIOLIS_IMPLEMENTATION_SUMMARY.md  GEMINI.md  README.md  check_dvl_tf.py  check_sonar_tf.py  测距.md  相对定位导航方案分析需求20250915.docx
.claude/: settings.local.json
devel/: .catkin
devel/include/uuv_plume_msgs/: CreatePassiveScalarTurbulentPlumeRequest.h  CreatePassiveScalarTurbulentPlumeResponse.h  CreateSpheroidPlumeRequest.h  CreateSpheroidPlumeResponse.h  DeletePlumeRequest.h  DeletePlumeResponse.h  GetCurrentModelRequest.h  GetCurrentModelResponse.h  GetNumParticlesRequest.h  GetNumParticlesResponse.h  GetPlumeConfigurationRequest.h  GetPlumeConfigurationResponse.h  GetPlumeSourcePositionRequest.h  GetPlumeSourcePositionResponse.h  LoadPlumeParticlesRequest.h  LoadPlumeParticlesResponse.h  ParticleConcentration.h  Salinity.h  SetCurrentDirectionRequest.h  SetCurrentDirectionResponse.h  SetCurrentModelRequest.h  SetCurrentModelResponse.h  SetCurrentVelocityRequest.h  SetCurrentVelocityResponse.h  SetPlumeConfigurationRequest.h  SetPlumeConfigurationResponse.h  SetPlumeLimitsRequest.h  SetPlumeLimitsResponse.h  SetPlumeSourcePositionRequest.h  SetPlumeSourcePositionResponse.h  StorePlumeStateRequest.h  StorePlumeStateResponse.h
devel/include/uuv_sensor_ros_plugins_msgs/: AcousticBroadcastMethod3.h  AcousticRangeOWTT.h  AcousticRangeTWTT.h  AcousticTxRequest.h  Method3SenderState.h
devel/lib/pkgconfig/: desistek_saga_control.pc  desistek_saga_description.pc  desistek_saga_gazebo.pc  eca_a9_control.pc  eca_a9_description.pc  eca_a9_gazebo.pc  lauv_control.pc  lauv_description.pc  lauv_gazebo.pc  rexrov2_control.pc  rexrov2_description.pc  rexrov2_gazebo.pc  rexrov_fgo_nav.pc  uuv_assistants.pc  uuv_auv_control_allocator.pc  uuv_control_cascaded_pid.pc  uuv_control_msgs.pc  uuv_control_utils.pc  (+31 more)
logs/report/: eskf_sim_report.md
logs/uuv_gazebo_plugins/: build.cmake.000.log.stderr
logs/uuv_sensor_ros_plugins/: build.cmake.000.log.stderr  build.make.000.log.stderr
logs/uuv_world_ros_plugins/: build.cmake.000.log.stderr
scripts/: analyze_eskf_logs.py  auv_log_utils.py  bad_excel_files.txt  bag_to_excel.py  check_excel_files.py  plot_all_errors.py  plot_relative_distance_errors.py
src/: AUV_FLEET_USAGE.md  detailed_simulation_plan.md
src/eca_a9/eca_a9_control/eca_a9_control/: CMakeLists.txt  README_combined_navigation.md
src/eca_a9/eca_a9_control/eca_a9_control/launch/: start_acoustic_network.launch  start_combined_navigation.launch  start_demo_auv_control_with_fusion.launch  start_geometric_tracking_control.launch  start_geometric_tracking_with_fusion.launch  start_nmb_sm_control.launch
src/eca_a9/eca_a9_control/eca_a9_control/rviz/: dual_eca_a9_control.rviz  multi_eca_a9_control.rviz  multi_layer_eca_a9_control.rviz
src/eca_a9/eca_a9_control/eca_a9_control/scripts/: acoustic_router.py  auv_combined_navigation.py
src/rexrov_fgo_nav/: CMakeLists.txt  GEMINI.md  USAGE.md  check_sensors.py  diagnostic_check.py  run_test.sh  test_phase1.md  test_phase3.md  todo.md
src/rexrov_fgo_nav/config/: fgo_demo.rviz
src/rexrov_fgo_nav/include/rexrov_fgo_nav/: BodyVelocityFactor.h  SensorFrontend.h  SlidingWindowGraph.h  SonarProcessor.h
src/rexrov_fgo_nav/launch/: demo_helical_fgo.launch  start_evaluator.launch  start_fgo_nav.launch  start_simulation.launch
src/rexrov_fgo_nav/src/: SensorFrontend.cpp  SlidingWindowGraph.cpp  SonarProcessor.cpp  fgo_node.cpp
src/rexrov_fgo_nav/urdf/: rexrov_sonar_custom.xacro
src/uuv_eskf_nav/: 0.py  1.py  2.py  5.py  6.py  7.py  AGENTS.md  CMakeLists.txt  COORDINATE_FRAME_FIX.md  ESKF_ALGORITHM_REVIEW_SUMMARY.md  IFLOW.md  IMPROVED_ESKF_SUMMARY.md  MEASUREMENT_UPDATE_SUMMARY.md  NAVIGATION_TEST_GUIDE.md  gazebo_terrain.asc  gebco_2025_n40.4838_s39.4745_w131.501_e132.4997.asc  generate_cross_map.py  generate_grid_map.py  generate_map.py  generate_radial_map.py  high_res_terrain.asc  map.py  package.xml  terrain_with_noise.asc
src/uuv_eskf_nav/config/: eskf_params.yaml  improved_eskf_config.yaml
src/uuv_eskf_nav/include/uuv_eskf_nav/: eskf_core.h  eskf_types.h  sensor_manager.h
src/uuv_eskf_nav/launch/: enhanced_evaluator.launch  eskf_navigation.launch  eskf_navigation_test.launch  real_terrain.world  start_demo.launch  start_demo_circle.launch  start_demo_lawnmower.launch  start_demo_minimal.launch  start_real_world.launch  start_terrain_matching.launch  start_terrain_matching_gpu.launch
src/uuv_eskf_nav/models/high_res_terrain/: model.config  model.sdf
src/uuv_eskf_nav/models/real_terrain/: model.config  model.sdf
src/uuv_eskf_nav/scripts/: add_terrain_noise.py  capture_gpu_pf_logs.sh  capture_gpu_pf_logs_with_sim_time.sh  check_gradient.py  enhanced_navigation_evaluator.py  gpu_pf_logs.txt  navigation_evaluator.py  send_lawnmower_path.py  startup_message.py  terrain_map_server.py  terrain_map_server_gpu.py  terrain_matching_node.py  terrain_matching_node_gpu.py
src/uuv_eskf_nav/scripts/gpu_pf_logs/: gpu_pf_logs_20251210_132947_1.txt  gpu_pf_logs_20251210_133356_1.txt  gpu_pf_logs_20251210_133614_1.txt  gpu_pf_logs_20251210_134131_1.txt  gpu_pf_logs_20251210_214711_1.txt
src/uuv_eskf_nav/src/: eskf_core.cpp  eskf_navigation_node.cpp  sensor_manager.cpp  test_earth_rotation.cpp  test_eskf.cpp  test_measurement_update.cpp
src/uuv_eskf_nav_1/: CMakeLists.txt
src/uuv_eskf_nav_2/: CMakeLists.txt  package.xml
src/uuv_eskf_nav_3/: CMakeLists.txt
src/uuv_eskf_nav_3/config/: eskf_params.yaml  navigation_test.rviz
src/uuv_eskf_nav_3/include/uuv_eskf_nav/: eskf_core.h  eskf_types.h
src/uuv_eskf_nav_3/launch/: enhanced_evaluator.launch  eskf_navigation.launch
src/uuv_eskf_nav_3/scripts/: enhanced_navigation_evaluator.py
src/uuv_eskf_nav_3/src/: eskf_core.cpp  eskf_navigation_node.cpp
src/uuv_eskf_nav_4/: CMakeLists.txt
src/uuv_eskf_nav_5/: CMakeLists.txt
src/uuv_eskf_nav_6/: CMakeLists.txt
src/uuv_eskf_nav_7/: CMakeLists.txt
src/uuv_eskf_nav_8/: CMakeLists.txt  README.md
src/uuv_eskf_nav_9/: CMakeLists.txt
src/uuv_nav_fusion/: CMakeLists.txt  README.md
(+1088 files in other folders)
